# compclub

./: README.md
advanced-git/: examples.md  slides.html  slides.md
dependencies-environments/python-c-example/: build.py  pyproject.toml
dependencies-environments/python-c-example/linked_pyext/: __init__.py
dependencies-environments/python-c-example/src/: linked_pyextmodule.c  simple_pyextmodule.c
